# geoson

./: .envrc  .libs  CHANGELOG.md  CMakeLists.txt  README.md  compile_commands.json  run.sh
examples/: crs_conversion_example.cpp  go_get.cpp  main.cpp
include/geoget/: geoget.hpp
include/geoson/: geoson.hpp  libgeojson.h  libgeojson.hpp  parser.hpp  types.hpp  vector.hpp  writter.hpp
misc/: field4.geojson  field4_modified.geojson  wur.geojson
src/: exe.cpp
test/: test_crs_conversion.cpp  test_error_handling.cpp  test_integration.cpp  test_parser.cpp  test_types.cpp  test_vector.cpp  test_writer.cpp
